# toy-pose-graph-optimization-ceres

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
include/: normalise_angle.h  pose_graph_2d.h  pose_graph_2d_error_terms.h  pose_graph_3d.h  pose_graph_3d_error_terms.h
src/: example_2d.cpp  example_3d.cpp  pose_graph_2d.cpp  pose_graph_3d.cpp
util/: plot_results.py  plot_results_2d.py
